--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -2,4 +2,50 @@
 
 /* 回答はここに書いてね */
 
+.q3__content {
+  table-layout: fixed;
+  width: 100%;
+  text-align: center;
+}
+
+.q3__content thead {
+  background-color: #2244aa;
+  color: #fff;
+  font-size: 18px;
+  line-height: 26px;
+}
+
+.q3__content__list tr:last-child {
+  border-bottom: 2px dashed #000;
+}
+
+.q3__content__text td,
+th {
+  padding: 10px;
+  border: 1px solid #dedede;
+}
+
+.q3__content__text td {
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.q3__content__text td:first-child {
+  background-color: #2244aa;
+  color: #fff;
+  font-size: 18px;
+  line-height: 26px;
+}
+
+.q3__content__text th:first-child {
+  color: #fff;
+  font-size: 18px;
+  line-height: 26px;
+  background-color: #2244aa;
+}
+
+.q3__content__text:nth-child(2n) {
+  background-color: #ecf1f2;
+}
+
 /* 回答はここに書いてね */
