--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -11,7 +11,7 @@
 .q1__contents {
   background-color: #eff3f4;
   margin: 0 auto;
-  /* width: 940px; */
+  width: 940px;
 }
 
 .q1__content__box {
