--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -13,12 +13,12 @@
   padding: 20px;
 }
 
-.q2__content__img1 {
+.q2__content__img__left {
   margin: 0 20px 10px 0;
   float: left;
 }
 
-.q2__content__img2 {
+.q2__content__img__right {
   margin: 0 0 10px 20px;
   float: right;
 }
