--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -15,7 +15,7 @@
   line-height: 26px;
 }
 
-.q3__content__list tr:last-child {
+.q3__content__texts tr:last-child {
   border-bottom: 2px dashed #000;
 }
 
