--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -8,45 +8,45 @@
   padding: 20px;
 }
 
-.q4__content__box {
+.q4__content__boxes {
   display: table;
   width: 100%;
 }
 
-.q4__content__box:last-child {
+.q4__content__boxes:last-child {
   margin-top: 20px;
 }
 
-.q4__content__box div {
+.q4__content__boxes div {
   display: table-cell;
   padding: 20px 0;
   box-sizing: border-box;
   text-align: center;
 }
 
-.q4__content__items.pink {
+.q4__content__box.pink {
   background-color: #fbc9b9;
   width: 100px;
 }
 
-.q4__content__items.purple {
+.q4__content__box.purple {
   background-color: #e0abd9;
 }
 
-.q4__content__items.blue {
+.q4__content__box.blue {
   background-color: #b6d8ed;
   width: 100px;
 }
 
-.q4__content__items.yellow {
+.q4__content__box.yellow {
   background-color: #e5d32e;
 }
 
-.q4__content__items.red {
+.q4__content__box.red {
   background-color: #ec8f9a;
 }
 
-.q4__content__items.green {
+.q4__content__box.green {
   background-color: #8fdcad;
   width: 500px;
 }
