--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -6,12 +6,12 @@
   width: 940px;
   margin: 0 auto;
   background-color: #eff3f4;
-}
-
-.q2__content__box {
   box-sizing: border-box;
   padding: 20px;
 }
+
+/* .q2__content__box {
+} */
 
 .q2__content__img__left {
   margin: 0 20px 10px 0;
