--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -32,12 +32,12 @@
 
 .q1__content__text {
   background-color: #eaf4ff;
-  box-sizing: border-box;
   border: 10px solid #022326;
   line-height: 16px;
   font-size: 16px;
   padding: 20px;
-  width: 230px;
+  /* box-sizing: border-box;
+  width: 230px; */
 }
 
 /* 回答はここに書いてね */
