--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -13,14 +13,14 @@
 .q6__box__top p {
   display: inline-block;
 }
-.q6__box__top__text {
+.q6__top__text {
   background-color: #e6f2ff;
   width: 90px;
   padding: 10px;
   box-sizing: border-box;
 }
 
-.q6__box__top__text.q6__box__right {
+.q6__top__text.q6__box__right {
   margin: 0 auto;
   display: block;
   text-align: center;
@@ -30,33 +30,33 @@
 
 -----------------------------------*/
 
-.q6__box__middle {
+.q6__table {
   display: table;
 }
 
-.q6__box__middle__head {
+.q6__table__box {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
 }
 
-.q6__box__middle__foot {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.q6__box__middle__text {
+.q6__table__text {
   padding: 10px;
   background-color: #fff;
   display: inline-block;
 }
 
-.q6__box__bottom {
+.q6__flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.q6__position {
   position: relative;
 }
 
-.q6__box__hard {
+.q6__position__hard {
   position: absolute;
   top: 0;
   right: 0;
@@ -65,7 +65,7 @@
   margin: auto;
 }
 
-.q6__box__change {
+.q6__position__change {
   position: absolute;
   top: 50%;
   right: 50%;
