--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -5,7 +5,7 @@
 .q9__content {
   width: 500px;
   padding: 20px;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   border: 5px solid #222;
   border-radius: 30px;
   margin: 0 auto;
@@ -17,7 +17,7 @@
   content: "";
   border: 20px solid transparent;
   position: absolute;
-  left: 25px;
+  left: 30px;
 }
 
 .q9__content::before {
@@ -27,7 +27,7 @@
 
 .q9__content::after {
   border-top-color: #fff;
-  bottom: -37px;
+  bottom: -38px;
 }
 
 .q9__content__text {
