--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -61,10 +61,10 @@
   border: 10px solid #ecf1f2;
   border-top: 10px solid #00bcd4;
   border-radius: 50%;
-  animation: sp-anime 1.1s infinite linear;
+  animation: rotation 1.1s infinite linear;
 }
 
-@keyframes sp-anime {
+@keyframes rotation {
   100% {
     transform: rotate(360deg);
   }
