--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -10,6 +10,8 @@
   border-radius: 30px;
   margin: 0 auto;
   position: relative;
+  font-size: 16px;
+  line-height: 16px;
 }
 
 .q9__content::before,
@@ -30,9 +32,9 @@
   bottom: -38px;
 }
 
-.q9__content__text {
+/* .q9__content__text {
   font-size: 16px;
   line-height: 16px;
-}
+} */
 
 /* 回答はここに書いてね */
